{
    "name": "ClownInputs",
    "maps": [
        {
            "name": "Clown P1",
            "id": "49a99eab-9e44-46d0-8df4-8c078eea4169",
            "actions": [
                {
                    "name": "AlternatingPrimary",
                    "type": "Button",
                    "id": "38dafffd-3f36-4a51-9940-b6b46424ec40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AlternatingSecondary",
                    "type": "Button",
                    "id": "3b6c28d3-d764-47ef-b871-993b80b04bc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Join",
                    "type": "Button",
                    "id": "347e30ed-6059-42db-b9a7-22b2ce5aaeeb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "549c2d0b-8b45-48d9-9487-90826551b598",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AlternatingPrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c131e9ee-c2f5-4086-964a-63537abc5a27",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AlternatingPrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83b9a77a-1c24-42ff-bc27-d7fcc9c2e854",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AlternatingSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a12e145-04cc-4624-aa34-721c1585de93",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AlternatingSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3359d4c-6257-4d95-aaaa-80c7b077fc6b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Join",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dab3554f-365c-4875-811b-cfe28643f8b7",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Join",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}